Added ongoings show func

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,10 @@ server#server.port=8080
 
 telegrambot.userName=@rdfl_bot
 telegrambot.botToken=5238873081:AAEnAlmOEFjm28CLIdm3_NwT3uMIEuie-D0
-telegrambot.webHookPath=https://4e40-5-77-30-206.ngrok.io 
+telegrambot.webHookPath=https://73cb-5-77-30-206.ngrok.io
 telegrambot.adminId=471489235
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/shikimori
 spring.datasource.username=postgres
 spring.datasource.password=31122001
-
