--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation group: 'org.telegram', name: 'telegrambots-spring-boot-starter', version: '6.0.1'
+    implementation group: 'org.jsoup', name: 'jsoup', version: '1.14.3'
 }
 
 tasks.named('test') {
