--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server#server.port=8080
 
 telegrambot.userName=@rdfl_bot
-telegrambot.botToken=5238873081:AAEnAlmOEFjm28CLIdm3_NwT3uMIEuie-D0
-telegrambot.webHookPath=https://070f-178-75-48-177.ngrok.io
+telegrambot.botToken=
+telegrambot.webHookPath=
 telegrambot.adminId=471489235
 
 spring.datasource.driver-class-name=org.postgresql.Driver
