--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server#server.port=8080
 
 telegrambot.userName=@rdfl_bot
 telegrambot.botToken=
-telegrambot.webHookPath=https://9287-5-77-30-206.ngrok.io
+telegrambot.webHookPath=
 telegrambot.adminId=471489235
 
 spring.datasource.driver-class-name=org.postgresql.Driver
